welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:4: error: ';' expected but '.' found.
val decalage = litMessage()ch.toInt
                             ^